# hanalyze

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  RELEASING.md  hanalyze.cabal  hanalyze.cabal.tmp
app/: Main.hs
bench/: README.md  RESULTS_tier12.md  aggregate.py  requirements.txt  run_hbm_3way.sh
bench/custom-design/: REPORT.md
bench/haskell/: BenchBO.hs  BenchBetaIsolate.hs  BenchBootstrapIsolate.hs  BenchCustomDesign.hs  BenchDataGen.hs  BenchFormulaRef.hs  BenchHBM54a.hs  BenchHBMADModes.hs  BenchHBMDist.hs  BenchHBMFuseSpike.hs  BenchHBMHet.hs  BenchHBMProfile.hs  BenchHBMScaling.hs  BenchHBMVecADSpike.hs  BenchHBMVecIRProf.hs  BenchHBMVecIRSpike.hs  BenchHBMVecSpike.hs  BenchKernel.hs  BenchM2Iso.hs  BenchMCMCB7.hs  BenchMCMCDiag.hs  BenchMCMCExtras.hs  BenchML.hs  BenchMO.hs  BenchMassiv.hs  BenchMemAggregate.hs  BenchMemBO.hs  BenchMemMCMC.hs  BenchMemNSGA.hs  BenchMemVI.hs  BenchMultiOutput.hs  BenchOptim.hs  BenchOptimPlus.hs  BenchPhase17.hs  BenchProfile.hs  BenchRFFOOM.hs  BenchRegression.hs  BenchRegrid.hs  BenchStatUtil.hs  BenchSurvTS.hs  (+6 more)
bench/posteriordb/: Common.hs  README.md  _common.py
bench/python/: agg_hbm_3way.py  bench_bo.py  bench_formula.py  bench_hbm_m5_long.py  bench_hbm_scaling.py  bench_kernel.py  bench_mcmc_b7.py  bench_mcmc_extras.py  bench_ml.py  bench_mo.py  bench_multi_output.py  bench_optim.py  bench_optim_plus.py  bench_phase17.py  bench_regression.py  bench_regrid.py  bench_stat_util.py  bench_survts.py  bench_tier12.py  bench_ts_extras.py  cmp_hbm_correlated_re_p80.py  formula_haskell_ref.json  gen_radon_csv.py  pymc_numpyro_time.py  pymc_plate_reference.py  pymc_time.py
bench/results/: B10b_NUTS_DIAGNOSIS.md  BO_INVESTIGATION.md  HBM_SCALING.md  NSGA_INVESTIGATION.md  OPEN_ISSUES.md  PLAN_FUTURE_BENCH.md  PYMC_BENCHMARK.md  REPORT.md  SAMPLER_BACKEND_MATRIX.md  SUMMARY.md  mo_quality.csv  perf_profile_findings.md  tasty_phase1-7.csv  tasty_phase11a.csv  tasty_phase11c.csv
data/dirty/: 01_clean.csv  02_no_header.csv  03_preamble.csv  04_ragged.csv  05_dup_header.csv  06_blank_unnamed.csv  07_mixed_na.csv  08_thousands_currency.csv  09_quotes_commas.csv  10_bom.csv  11_semicolon_eu.csv  13_crlf.csv  14_wrong_ext.csv  15_trailing_blank.csv  16_dates_units.csv  19_whitespace.csv
data/distributions/: exponential.csv  normal.csv  poisson.csv
data/io/: melted_sample.csv  potential_long.csv  potential_long_jagged.csv  potential_wide.csv  wide_sample.csv
data/readme/: sales.csv
data/regression/: test_lm.csv  test_poisson.csv
demo/: AR1Demo.hs  BayesOptDemo.hs  BenchMCMC.hs  ClinicalTrial.hs  Demo.hs  DirichletDemo.hs  DiscreteObsDemo.hs  ExternalIODemo.hs  ForestCompareDemo.hs  GibbsDemo.hs  GibbsHBMDemo.hs  GibbsPTest.hs  HBMComparisonDemo.hs  HBMExample.hs  HBMPDemo.hs  HBMPMCMCDemo.hs  HBMRegressionDemo.hs  IntegratedDemo.hs  LKJ3DDemo.hs  LKJDemo.hs  MultiLMDemo.hs  MultiRSMDemo.hs  MultinomialDemo.hs  MvNormalDemo.hs  NSGADemo.hs  NSGASmokeDemo.hs  NUTSPTest.hs  NegBinomDemo.hs  NonCenteredDemo.hs  ParetoSmokeDemo.hs  PreprocessDemo.hs  PyMCStatusDemo.hs  RobustGPDemo.hs  SetDataDemo.hs  SimpsonParadoxDemo.hs  SliceDemo.hs  SplineDemo.hs  SummaryDemo.hs  TestHMCNUTS.hs  VIDemo.hs  (+2 more)
demo/bayesian/: ADDemo.hs  AR1Demo.hs  BenchMCMC.hs  CDFTestDemo.hs  ClinicalTrial.hs  DeterministicDemo.hs  DirichletDemo.hs  DiscreteObsDemo.hs  EnergyDemo.hs  ForestCompareDemo.hs  GibbsDemo.hs  GibbsHBMDemo.hs  GibbsPTest.hs  HBMComparisonDemo.hs  HBMExample.hs  HBMPDemo.hs  HBMPMCMCDemo.hs  HBMRandomSlopeDemo.hs  HBMRegressionDemo.hs  LKJ3DDemo.hs  LKJDemo.hs  MixtureDemo.hs  MultinomialDemo.hs  MvNormalDemo.hs  MvNormalLatentDemo.hs  NUTSPTest.hs  NegBinomDemo.hs  NewDistribDemo.hs  NewDistribsDemo.hs  NonCenteredDemo.hs  PPCDemo.hs  Phase37A0VerifyDemo.hs  PlateNotationDemo.hs  PotentialDemo.hs  PyMCStatusDemo.hs  SetDataDemo.hs  SimpsonParadoxDemo.hs  SliceDemo.hs  SummaryDemo.hs  TestHMCNUTS.hs  (+4 more)
demo/doe/: ImplantSequentialDemo.hs  RSMSampleSizeDemo.hs
demo/doe-optim/: BayesOptDemo.hs  CISImplantWorkflowDemo.hs  DOEDemo.hs  MaterialsMOODemo.hs  MultiRSMDemo.hs  NSGADemo.hs  NSGASmokeDemo.hs  OptimalDOEDemo.hs  ParetoSmokeDemo.hs  RSMDemo.hs  SingleOptBench.hs
demo/io/: DirtyDataDemo.hs  ExternalIODemo.hs  PotentialGen.hs  PotentialMultiKR.hs  PotentialMultiOut.hs  PreprocessDemo.hs  RegridBenchDemo.hs
demo/regression/: AnalysisCompareDemo.hs  GPDemo.hs  KernelDemo.hs  MultiLMDemo.hs  MultivariateDemo.hs  RFFDemo.hs  RegularizedDemo.hs  RobustGPDemo.hs  SplineDemo.hs
demo/visualization/: BarDemo.hs  NewSectionsDemo.hs
docs/: 01-quickstart.ja.md  01-quickstart.md  02-probabilistic-model.md  02-pymc-comparison.ja.md  02-pymc-comparison.md  03-mcmc-samplers.md  04-gibbs.md  05-variational-inference.md  06-model-comparison.ja.md  06-model-comparison.md  07-visualization.ja.md  07-visualization.md  08-pymc-comparison.ja.md  08-pymc-comparison.md  09-distribution-relationships.ja.md  10-regression-extensions.ja.md  11-design-of-experiments.ja.md  12-multivariate-models.ja.md  13-multi-objective-optimization.ja.md
docs/api-guide/: 01-quickstart.ja.md  01-quickstart.md  02-regression.ja.md  02-regression.md  03-bayesian-hbm.ja.md  03-bayesian-hbm.md  04-multivariate.ja.md  04-multivariate.md  05-ml.ja.md  05-ml.md  06-timeseries.ja.md  06-timeseries.md  07-survival.ja.md  07-survival.md  08-causal.ja.md  08-causal.md  09-doe.ja.md  09-doe.md  10-stat.ja.md  10-stat.md  11-data.ja.md  11-data.md  12-plot.ja.md  12-plot.md  README.ja.md  README.md
docs/bayesian/: 01-distributions.ja.md  01-distributions.md  02-probabilistic-model.ja.md  02-probabilistic-model.md  03-mcmc-samplers.ja.md  03-mcmc-samplers.md  04-gibbs.ja.md  04-gibbs.md  05-vi.ja.md  05-vi.md  06-model-comparison.ja.md  06-model-comparison.md  07-advanced-marginal-likelihood.ja.md  07-advanced-marginal-likelihood.md  dag-extraction.ja.md  dag-extraction.md  dag-gallery.ja.md  (+17 more)
request/: 080-nsga2-progress-streaming.md  audit-q1-findings.md  audit-q3-results.md
src/: Hanalyze.hs
test/: Doctest.hs  Spec.hs  SpecHelper.hs
(+791 files in other folders)
