cabal-version: 3.0
name:          hanalyze
version:       0.1.0.0
synopsis:      Interactive data analysis and visualization in Haskell
license:       MIT
author:        toshiaki
maintainer:    frenzieddoll@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wredundant-constraints

library
  import:           warnings
  hs-source-dirs:   src
  default-language: GHC2021
  exposed-modules:
    DataFrame.Core
    DataIO.CSV
    Viz.Core
    Viz.Scatter
    Viz.Histogram
    Viz.Bar
    Model.Core
    Model.LM
    Model.GLM
    Model.GLMM
    Model.Spline
    Model.Kernel
    Model.Regularized
    Model.MultiLM
    Model.Multivariate
    Model.MultiGP
    Design.Factorial
    Design.Block
    Design.Mixed
    Design.Anova
    Design.Power
    Design.Quality
    Design.RSM
    Design.Optimal
    Design.MultiRSM
    Design.Orthogonal
    Optim.Desirability
    Model.HBM
    MCMC.Core
    MCMC.MH
    MCMC.HMC
    MCMC.NUTS
    MCMC.Gibbs
    MCMC.Slice
    Stat.Distribution
    Stat.MCMC
    Stat.ModelSelect
    Stat.AD
    Stat.VI
    Stat.PosteriorPredictive
    Stat.Summary
    Optim.Adam
    Optim.GradAscent
    Optim.Numeric
    Optim.NSGA
    Optim.Pareto
    Optim.Acquisition
    Optim.BayesOpt
    Viz.MCMC
    Viz.ModelGraph
    Viz.Report
    Model.GP
    Viz.GP
    Viz.GPReport
    Viz.Assets
    Viz.AnalysisReport
    Viz.Pareto
  build-depends:
      base                 >= 4.14 && < 5
    , async                >= 2.2  && < 2.3
    , bytestring           >= 0.11 && < 0.13
    , cassava              >= 0.5  && < 0.6
    , containers           >= 0.6  && < 0.8
    , filepath             >= 1.4  && < 1.6
    , hmatrix              >= 0.20 && < 0.22
    , hvega                >= 0.12 && < 0.13
    , mwc-random           >= 0.15 && < 0.16
    , process              >= 1.6  && < 1.8
    , statistics           >= 0.16 && < 0.17
    , text                 >= 1.2  && < 2.2
    , aeson                >= 2.0  && < 2.3
    , directory            >= 1.3  && < 1.4
    , temporary            >= 1.3  && < 1.4
    , unordered-containers >= 0.2  && < 0.3
    , ad                   >= 4.4  && < 4.6
    , vector               >= 0.12 && < 0.14

executable hanalyze
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , vector     >= 0.12 && < 0.14
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16
    , containers >= 0.6  && < 0.8
    , filepath   >= 1.4  && < 1.6

executable glmm-demo
  import:           warnings
  main-is:          Demo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base     >= 4.14 && < 5
    , hanalyze
    , vector   >= 0.12 && < 0.14
    , hmatrix  >= 0.20 && < 0.22

executable hbm-example
  import:           warnings
  main-is:          HBMExample.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable test-hmc-nuts
  import:           warnings
  main-is:          TestHMCNUTS.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable bench-mcmc
  import:           warnings
  main-is:          BenchMCMC.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , time       >= 1.9  && < 1.15

executable vi-demo
  import:           warnings
  main-is:          VIDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , time       >= 1.9  && < 1.15

executable gibbs-demo
  import:           warnings
  main-is:          GibbsDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , time       >= 1.9  && < 1.15

executable bar-demo
  import:           warnings
  main-is:          BarDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2

executable clinical-trial
  import:           warnings
  main-is:          ClinicalTrial.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable gp-demo
  import:           warnings
  main-is:          GPDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base     >= 4.14 && < 5
    , hanalyze

executable gibbs-hbm-demo
  import:           warnings
  main-is:          GibbsHBMDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable newdistribs-demo
  import:           warnings
  main-is:          NewDistribsDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable regularized-demo
  import:           warnings
  main-is:          RegularizedDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , vector     >= 0.12 && < 0.14
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16

executable optimaldoe-demo
  import:           warnings
  main-is:          OptimalDOEDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2

executable pareto-smoke
  import:           warnings
  main-is:          ParetoSmokeDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze

executable materials-moo-demo
  import:           warnings
  main-is:          MaterialsMOODemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , vector     >= 0.12 && < 0.14
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16

executable bayesopt-demo
  import:           warnings
  main-is:          BayesOptDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , mwc-random >= 0.15 && < 0.16

executable multirsm-demo
  import:           warnings
  main-is:          MultiRSMDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , hmatrix    >= 0.20 && < 0.22

executable multivariate-demo
  import:           warnings
  main-is:          MultivariateDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16

executable multilm-demo
  import:           warnings
  main-is:          MultiLMDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16

executable nsga-demo
  import:           warnings
  main-is:          NSGADemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , mwc-random >= 0.15 && < 0.16

executable nsga-smoke
  import:           warnings
  main-is:          NSGASmokeDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , mwc-random >= 0.15 && < 0.16

executable rsm-demo
  import:           warnings
  main-is:          RSMDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , hmatrix    >= 0.20 && < 0.22
    , mwc-random >= 0.15 && < 0.16

executable doe-demo
  import:           warnings
  main-is:          DOEDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2

executable kernel-demo
  import:           warnings
  main-is:          KernelDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , vector     >= 0.12 && < 0.14
    , hvega      >= 0.12 && < 0.13
    , mwc-random >= 0.15 && < 0.16

executable spline-demo
  import:           warnings
  main-is:          SplineDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , vector     >= 0.12 && < 0.14
    , hmatrix    >= 0.20 && < 0.22
    , hvega      >= 0.12 && < 0.13
    , mwc-random >= 0.15 && < 0.16

executable integrated-demo
  import:           warnings
  main-is:          IntegratedDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable slice-demo
  import:           warnings
  main-is:          SliceDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable ar1-demo
  import:           warnings
  main-is:          AR1Demo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable lkj3d-demo
  import:           warnings
  main-is:          LKJ3DDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable lkj-demo
  import:           warnings
  main-is:          LKJDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable zeroinflated-demo
  import:           warnings
  main-is:          ZeroInflatedDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable multinomial-demo
  import:           warnings
  main-is:          MultinomialDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable negbinom-demo
  import:           warnings
  main-is:          NegBinomDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable mvnormal-latent-demo
  import:           warnings
  main-is:          MvNormalLatentDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable setdata-demo
  import:           warnings
  main-is:          SetDataDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable dirichlet-demo
  import:           warnings
  main-is:          DirichletDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable noncentered-demo
  import:           warnings
  main-is:          NonCenteredDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable deterministic-demo
  import:           warnings
  main-is:          DeterministicDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable summary-demo
  import:           warnings
  main-is:          SummaryDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable pymc-status-demo
  import:           warnings
  main-is:          PyMCStatusDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2

executable energy-demo
  import:           warnings
  main-is:          EnergyDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable mvnormal-demo
  import:           warnings
  main-is:          MvNormalDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable cdf-test
  import:           warnings
  main-is:          CDFTestDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze

executable trunc-censor-demo
  import:           warnings
  main-is:          TruncCensorDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable mixture-demo
  import:           warnings
  main-is:          MixtureDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable potential-demo
  import:           warnings
  main-is:          PotentialDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable forest-compare
  import:           warnings
  main-is:          ForestCompareDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable ppc-demo
  import:           warnings
  main-is:          PPCDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable discrete-obs-demo
  import:           warnings
  main-is:          DiscreteObsDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable new-distrib-demo
  import:           warnings
  main-is:          NewDistribDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16

executable hbm-random-slope
  import:           warnings
  main-is:          HBMRandomSlopeDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , vector     >= 0.12 && < 0.14

executable simpson-paradox
  import:           warnings
  main-is:          SimpsonParadoxDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , vector     >= 0.12 && < 0.14
    , hmatrix    >= 0.20 && < 0.22

executable hbm-regression
  import:           warnings
  main-is:          HBMRegressionDemo.hs
  hs-source-dirs:   demo
  default-language: GHC2021
  build-depends:
      base       >= 4.14 && < 5
    , hanalyze
    , text       >= 1.2  && < 2.2
    , containers >= 0.6  && < 0.8
    , mwc-random >= 0.15 && < 0.16
    , vector     >= 0.12 && < 0.14

test-suite hanalyze-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  default-language: GHC2021
  build-depends:
      base     >= 4.14 && < 5
    , hanalyze
    , hspec    >= 2.10 && < 2.12
    , vector   >= 0.12 && < 0.14
